# alltoken-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml  release.yml  sync-spec.yml
alias/: README.md  pyproject.toml
alias/src/alltoken_ai/: __init__.py
scripts/: generate.py
src/alltoken/: __init__.py  _anthropic.py  _client.py  _error.py  _openai.py  _streaming.py  _types.py
src/alltoken/_resources/: chat.py
tests/: test_smoke.py
