[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alltoken"
version = "0.2.3"
description = "Official Python SDK for AllToken — one API for OpenAI, Anthropic, and 100+ models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AllToken", email = "dev@alltoken.ai" }]
keywords = ["alltoken", "openai", "anthropic", "llm", "ai", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://alltoken.ai"
Repository = "https://github.com/alltoken-ai/alltoken-python"
Documentation = "https://alltoken.ai/docs"
Issues = "https://github.com/alltoken-ai/alltoken-python/issues"

[project.optional-dependencies]
dev = [
  "datamodel-code-generator[ruff]>=0.26.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alltoken"]

[tool.hatch.build.targets.sdist]
include = ["src/alltoken", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/alltoken"]
