[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alltoken"
version = "0.2.26"
description = "Official Python SDK for AllToken — one API for OpenAI, Anthropic, and 100+ models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AllToken", email = "dev@alltoken.ai" }]
keywords = ["alltoken", "openai", "anthropic", "llm", "ai", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://alltoken.ai"
Repository = "https://github.com/alltoken-ai/alltoken-python"
Documentation = "https://alltoken.ai/docs"
Issues = "https://github.com/alltoken-ai/alltoken-python/issues"

[project.optional-dependencies]
dev = [
  "datamodel-code-generator[ruff]>=0.26.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alltoken"]

[tool.hatch.build.targets.sdist]
include = ["src/alltoken", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"
# 自动生成代码不参与 lint —— spec 里的中文 description 原样塞进 docstring 会超过
# line-length，但这是 codegen 输出，不应该被人类规则约束（业界标准做法）。
# 若要重新启用，先在 scripts/generate.py 里给 ruff 加 # noqa 或截断 description。
extend-exclude = ["src/alltoken/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/alltoken"]
# 自动生成代码不参与 strict 类型检查 —— datamodel-code-generator 把 enum 默认值
# 输出成 raw string（如 size: Size | None = "1024x1024"），strict 模式判 incompatible types。
# 这是 codegen 模板问题，跟我们 spec 无关；fix 应该在生成器侧，但本仓不维护生成器。
# 跟 ruff 一致跳过 generated。
exclude = ["^src/alltoken/generated/"]

# 防止主 module import generated 时 mypy follow 进去做严格检查
[[tool.mypy.overrides]]
module = "alltoken.generated.*"
ignore_errors = true
