[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alltoken-ai"
version = "0.2.7"
description = "Alias package for alltoken — installs the official AllToken Python SDK."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AllToken", email = "dev@alltoken.ai" }]
keywords = ["alltoken", "openai", "anthropic", "llm", "ai", "api"]
dependencies = ["alltoken>=0.2.0"]

[project.urls]
Homepage = "https://alltoken.ai"
Repository = "https://github.com/alltoken-ai/alltoken-python"

[tool.hatch.build.targets.wheel]
packages = ["src/alltoken_ai"]
